<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>

        <item
            android:id="@+id/nav_what_is_startup"
            android:title="@string/what_is_startup"
            android:icon="@drawable/startup"/>

        <item
            android:id="@+id/nav_how_to_register"
            android:title="@string/how_to_register"
            android:icon="@drawable/register"/>

        <item
            android:id="@+id/nav_entrepreneur_motivation"
            android:title="@string/entrepreneur_motivation"
            android:icon="@drawable/ic_video_library_black_24dp"/>


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about_us"
                android:icon="@drawable/aboutus"/>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share_black_24dp"/>
            <item
                android:id="@+id/nav_contact_us"
                android:title="@string/contact_us"
                android:icon="@drawable/ic_import_contacts_black_24dp"/>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout"/>
        </menu>
    </item>

</menu>