<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupsFragment"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <LinearLayout
           android:id="@+id/circles"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_48sdp"
           android:gravity="center"
           android:orientation="horizontal">

           <ImageView
               android:layout_width="@dimen/_8sdp"
               android:layout_height="@dimen/_8sdp"
               android:src="@drawable/blue_circle"
               android:layout_gravity="center"/>

           <TextView
               android:layout_width="@dimen/_72sdp"
               android:layout_height="@dimen/_16sdp"
               android:text="@string/already_publish"
               android:layout_marginLeft="@dimen/_4sdp"
               android:layout_marginRight="@dimen/_8sdp"
               android:textColor="@color/black"
               android:textSize="@dimen/_10ssp"/>

           <ImageView
               android:layout_width="@dimen/_8sdp"
               android:layout_height="@dimen/_8sdp"
               android:src="@drawable/orange_circle"
               android:layout_gravity="center"/>

           <TextView
               android:layout_width="@dimen/_82sdp"
               android:layout_height="@dimen/_16sdp"
               android:text="@string/under_publishing"
               android:layout_marginLeft="@dimen/_4sdp"
               android:layout_marginRight="@dimen/_6sdp"
               android:textColor="@color/black"
               android:textSize="@dimen/_10ssp"/>

           <ImageView
               android:layout_width="@dimen/_8sdp"
               android:layout_height="@dimen/_8sdp"
               android:src="@drawable/pink_circle"
               android:layout_gravity="center"/>

           <TextView
               android:layout_width="@dimen/_48sdp"
               android:layout_height="@dimen/_16sdp"
               android:text="@string/just_idea"
               android:layout_marginLeft="@dimen/_4sdp"
               android:textColor="@color/black"
               android:textSize="@dimen/_10ssp"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_startups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/circles"
            android:layout_marginBottom="@dimen/_50sdp">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>


</FrameLayout>